- fix query in AliasHandler getList which caused an empty list on some 
  systems (bug#313)
- fetchmail.pl: fix ssl extra options (cert check, cert path, fingerprint)
- fix logging (run setup.php to fix old log entries) (bug#317)
- fetchmail.php: change error_reporting() to exclude E_NOTICE (bug#322)
- fr.lang translation update (patch#123)

Version 3.0 beta1 (2.91) - 2014/05/06 - SVN r1670
-------------------------------------------------

  Summary of major changes:
  - new command-line interface "postfixadmin-cli"
  - major rewrite:
    - move lots of code into *Handler classes, which are used by web and
      command-line interface
    - replace various edit-*.php and create-*.php with a generic editform
      (edit.php/editform.tpl)
    - this also means it's easy to customize forms, add fields etc.
      (see $CONF['*_struct_hook'])
    - lots of code cleanup, remove/merge lots of duplicated code and templates
    - use smarty for templates
  - add ability to choose activation date, end date and reply interval for
    vacation message
  - various enhancements everywhere
  - redesign login page, list and edit pages (goodbye, green!) and make them wider
  - several new config options and changed defaults
  - NOTE: changes from the 2.3.x releases also apply to this version

  new config options:
  - $CONF['language_hook']
    Hook function to override or add translations to $PALANG.
    Example hook function included (commented out).
  - $CONF['password_validation'] - array with regular expressions to check
    if a password is valid/good enough.
    The default configuration enforces:
    - minimum length 5 characters/digits/whatever
    - at least 2 characters
    - at least 2 digits
  - $CONF['*_struct_hook'] - make $struct in the *Handler classes customizeable
  - $CONF['vacation_choice_of_reply'] - list of reply interval options
  - $CONF['domain_quota'] - total quota per domain
  - $CONF['theme_custom_css'] - to add some custom CSS without editing the